
AC_INIT(src/rcompletion.c)

PKG_CFLAGS=""
PKG_LIBS=""

AC_CHECK_LIB([readline], [rl_completion_matches], 
             [
             PKG_CFLAGS="${PKG_CFLAGS} -DHAVE_LIBREADLINE"
             PKG_LIBS="${PKG_LIBS} -lreadline"
             ],
             [
             AC_MSG_ERROR(readline is required but was not found)
             exit 1
             ])

AC_CHECK_HEADER([readline/readline.h],
                [
                AC_MSG_NOTICE(system readline headers found)
                PKG_CFLAGS="${PKG_CFLAGS} -DHAVE_READLINE_H"
                ],
                [
                AC_MSG_NOTICE(readline header not found)
                AC_MSG_NOTICE(using package headers instead)
                ])

AC_SUBST(PKG_CFLAGS)
AC_SUBST(PKG_LIBS)

AC_OUTPUT(src/Makevars)

